10. Add meta tags for SEO and social media sharing in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <title>Far away</title>
+
+    <!-- Description and Author -->
+    <meta
+      name="description"
+      content="A travel packing list app built using React, JavaScript, and CSS."
+    />
+    <meta name="author" content="Apurba Dutta" />
+
+    <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+    <meta property="og:title" content="Far away" />
+    <meta
+      property="og:description"
+      content="Plan your travel efficiently with this smart packing list app."
+    />
+    <meta
+      property="og:image"
+      content="https://i.ibb.co/xtXDrNdF/far-away.jpg"
+    />
+    <meta property="og:url" content="https://far-away-list-apd.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Far away" />
+    <meta
+      name="twitter:description"
+      content="Smart packing list web app built with React, JavaScript, and CSS."
+    />
+    <meta
+      name="twitter:image"
+      content="https://i.ibb.co/xtXDrNdF/far-away.jpg"
+    />
+
+    <!-- Tech Stack -->
+    <meta
+      name="keywords"
+      content="React, JavaScript, CSS, Web App, Packing List, Travel App"
+    />
   </head>
   <body>
     <div id="root"></div>
